# cmake_config

./: .gitignore  CMakeLists.txt  config.txt
src/: main.cpp  template.hpp.in
